parsing shipdate
