# Order-Comments-Api/app/Http/Controllers/Api/OrderController.php
@@ -2,22 +2,37 @@
 
 namespace App\Http\Controllers\Api;
 
+use App\Interfaces\OrderServiceInterface;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 
 class OrderController extends Controller
 {
+    private OrderServiceInterface $orderService;
+
+    public function __construct(OrderServiceInterface $orderService)
+    {
+        $this->orderService = $orderService;
+    }
     /**
      * @OA\Post(
      *     tags={"CreateOrder"},
      *     path="/api/CreateOrder",
      *     summary="Create an order.",
+     *      @OA\Parameter(
+     *         name="Comment",
+     *         in="query",
+     *         description="Order Comment.",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
      *     @OA\Response(response="200", description="Success"),
      *     security={{"bearerAuth":{}}}
      * )
      */
     public function CreateOrder(Request $request)
     {
+        $payload = json_decode($request->getContent(), true);
         // $validated = $request->validate([
         //     'name' => 'required',
         //     'email' => 'required|email|unique:users',
@@ -25,27 +40,44 @@ class OrderController extends Controller
         //     'mobile_number' => 'required',
         // ]);
 
-        return "hi there2.";
+        return response()->json([
+            'data' => $this->orderService->CreateOrder($payload)
+        ]);
     }
 
-        /**
+    /**
      * @OA\Post(
      *     tags={"UpdateOrder"},
-     *     path="/api/UpdateOrder",
+     *     path="/api/UpdateOrder/{orderId}",
      *     summary="Update and existing order.",
+     *      @OA\Parameter(
+     *         name="comments",
+     *         in="query",
+     *         description="Order Comment.",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         description="ID of Order",
+     *         in="path",
+     *         name="orderId",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
      *     @OA\Response(response="200", description="Success"),
      *     security={{"bearerAuth":{}}}
      * )
      */
-    public function UpdateOrder(Request $request)
+    public function UpdateOrder(Request $request, $orderId)
     {
-        // $validated = $request->validate([
-        //     'name' => 'required',
-        //     'email' => 'required|email|unique:users',
-        //     'password' => 'required|confirmed',
-        //     'mobile_number' => 'required',
-        // ]);
-        
-        return "hi there3.";
+        $payload = json_decode($request->getContent(), true);
+
+        $orderDetails = [
+            'Comments' => $payload['comments']
+        ];
+
+        return response()->json([
+            'data' => $this->orderService->UpdateOrder($orderId, $orderDetails)
+        ]);
     }
 }
